# CopyDetect

./: CMakeLists.txt  README.md
src/: CMPDocument.cpp  CMPDocument.h  CMakeLists.txt  CalcFingerPrintStrategy.cpp  CalcFingerPrintStrategy.h  Detector.cpp  Detector.h  Document.cpp  Document.h  FingerPrint.cpp  FingerPrint.h  Lexer.cpp  Lexer.h  lex.yy.cc  main.cpp  scanner.h  scanner.lex  test_helper.h
test/: test.cpp  test2.cpp
